# auto-scout

./: AGENTS.md  README.md  main.py  pyproject.toml
auto_scout/: __init__.py  host.py  main.py  port.py
auto_scout/cli/: __init__.py  main.py
auto_scout/core/: __init__.py  context.py  decorators.py  executor.py  registry.py  result.py  scan.py  workflow.py
auto_scout/parsers/: __init__.py  base.py  nmap.py
auto_scout/scans/: __init__.py  default_scans.py
auto_scout/scans/nmap/: __init__.py  detailed_scan.py  quick_scan.py  vuln_scan.py
auto_scout/utils/: cmd_handler.py  console_handler.py  nist.py  storage.py  xml_parser.py
auto_scout/workflows/: __init__.py  pentest.py
tests/: __init__.py  test_context.py  test_nmap_parser.py  test_registry.py
user_scans/: example_scan.py
user_workflows/: example_workflow.py
