[project]
name = "auto-scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cpe>=1.3.1",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "survey>=5.4.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]
